# python-websockets-connect4

./: index.html  main.js  pyproject.toml  server.py
